full business logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Compiled class file
 *.class
 
-# Log file
-*.log
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+.run
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+target/
 
 # Package Files #
 *.jar
