--- a/tracker-app/pom.xml
+++ b/tracker-app/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.igordavydenko</groupId>
             <artifactId>tracker-migration</artifactId>
             <version>0.0.1-SNAPSHOT</version>
